--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -28,6 +28,9 @@
             <artifactId>hibernate-hikaricp</artifactId>
             <version>4.3.11.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
-
 </project>
