--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>persistence</artifactId>
 
+    <properties>
+        <hsqldb.version>2.3.2</hsqldb.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.parkhomenko</groupId>
@@ -27,6 +31,12 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-hikaricp</artifactId>
             <version>4.3.11.Final</version>
+        </dependency>
+        <!-- HyperSQL DB -->
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
