--- a/persistence/src/main/resources/prod-hibernate.properties
+++ b/persistence/src/main/resources/prod-hibernate.properties
@@ -1,2 +1,3 @@
 hibernate.hbm2ddl.auto=update
 hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
+hibernate.mapping_directory_locations=mappings
