--- a/rout/pom.xml
+++ b/rout/pom.xml
@@ -77,6 +77,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <!--<configuration>-->
+                    <!--<jvmArguments>-->
+                        <!-- -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006-->
+                    <!--</jvmArguments>-->
+                <!--</configuration>-->
+                <!--<configuration>-->
+                <!--<profiles>-->
+                    <!--<profile></profile>-->
+                <!--</profiles>-->
+                <!--</configuration>-->
             </plugin>
         </plugins>
     </build>
