--- a/persistence/src/main/resources/dev-hibernate.properties
+++ b/persistence/src/main/resources/dev-hibernate.properties
@@ -1,7 +1,9 @@
-#hibernate.hbm2ddl.auto=create-drop
 hibernate.hbm2ddl.auto=update
 hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
 hibernate.mapping_directory_locations=mappings
+hibernate.search.default.directory_provider=filesystem
+hibernate.search.default.indexBase=/home/dmytro/lucene/indexes
+#hibernate.search.default.indexBase=target/lucene/indexes
